infrastructure/envoy-gateway/resources/gateway/internal/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy
  listeners:
    - name: frigate-unauthenticated
      protocol: TCP
      port: 5000
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: frigate
    - name: frigate-rtsp
      protocol: TCP
      port: 8554
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: frigate
    - name: frigate-webrtc-udp
      protocol: UDP
      port: 8555
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: frigate
    - name: frigate-webrtc-tcp
      protocol: TCP
      port: 8555
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: frigate
    - name: git-ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: gitea
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoy-gateway-cert
            kind: Secret
          - name: mcswain.internal-tls
            kind: Secret
          - name: mcswain.dev-tls
            namespace: cert-manager
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
