infrastructure/envoy-gateway/resources/gateway/internal/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: internal-backend-policy
  namespace: envoy-gateway-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
  connection:
    bufferLimit: 4Mi
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
